[tool.poetry]
name = "learningai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
sphinx-book-theme = "^1.1.0"
myst-parser = "^2.0.0"
myst-nb = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
